--- a/Edgar/FirstExperiments/abc_pseudospectrum_L2.ipynb
+++ b/Edgar/FirstExperiments/abc_pseudospectrum_L2.ipynb
@@ -73,7 +73,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7fc6d8241390>]"
+       "[<matplotlib.lines.Line2D at 0x7fe034cf9320>]"
       ]
      },
      "execution_count": 4,
@@ -237,33 +237,15 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 38,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0"
-      ]
-     },
-     "execution_count": 38,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "np.arange(0, 3)\n",
-    "\n",
-    "np.arange(1, int(np.floor(7/2)))\n",
-    "np.zeros(int(np.floor(7/2)-1))\n",
-    "CL_grid(4)[0]\n",
-    "np.kron(1, 0)"
+    "# Attempt to implement the basic elements of Appendix C, subsection 3."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 217,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -278,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 222,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -303,7 +285,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 223,
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def Kdelta(i,j):\n",
+    "    if (i==j):\n",
+    "        KroneckerDeltaReturn=1\n",
+    "    else:\n",
+    "        KroneckerDeltaReturn=0\n",
+    "    \n",
+    "    return KroneckerDeltaReturn"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -320,13 +317,20 @@
     "    alpha = np.ones(n)\n",
     "    alpha[0]=2\n",
     "    alpha[N]=2\n",
-    "    Nhalffloor_grid = np.arange(1, int(np.floor(N/2)))\n",
+    "    #list of indices in the sum\n",
+    "    # we add one because we want to include the point floor(N/2) in the arrange.\n",
+    "    Nhalffloor_grid = np.arange(1, int(np.floor(N/2)+1))\n",
+    "    #print(\"n =\" ,  n)\n",
+    "    #print(\"N =\" ,  N)\n",
+    "    #print(\"Nhalffloor_grid =\" ,  Nhalffloor_grid)\n",
     "    CNmuMatrix=np.zeros((n,n))\n",
     "    for i in n_grid :\n",
     "        for j in n_grid :\n",
     "            if (i==j) :  \n",
-    "                CNmuMatrix[i,j] = (2*mu[i]/(alpha[i]*N))*(1-sum([(Chebyshev(2*k,x_grid[i]))*((2-np.kron(2*k,N))/(4*k**2-1)) for k  in Nhalffloor_grid]))\n",
-    "        else :               \n",
+    "                #we construct a list of the elements to be summed up using List comprehension\n",
+    "                ExpressionInSummedUpInListForm = [(Chebyshev(2*k,x_grid[i]))*((2-Kdelta(2*k,N))/(4*(k**2)-1)) for k  in Nhalffloor_grid]\n",
+    "                CNmuMatrix[i,j] = ((2*mu[i])/(alpha[i]*N))*(1-sum(ExpressionInSummedUpInListForm))\n",
+    "            else :               \n",
     "                CNmuMatrix[i,j] = 0\n",
     "              \n",
     "    return CNmuMatrix"
@@ -334,29 +338,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 224,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#Diagonal_Random_Matrix(4)\n",
-    "#Diagonal_Random_Matrix(4).np.adjoint\n",
-    "#Diagonal_Random_Matrix(4).np.getH()\n",
-    "#\n",
-    "#x = np.matrix(np.arange(12).reshape((3,4)))\n",
-    "#\n",
-    "#z = x - 1j*x; z\n",
-    "#\n",
-    "#z.getH()\n",
-    "#z"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 225,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "def GramMatrix_abc(w):\n",
+    "    # For the abc operator the Gram Matrix is simple\n",
+    "    # This needs to be changed for a more complicated case such as poschl-teller\n",
     "    GramMatrix=CNmuMatrix(w)\n",
     "    return GramMatrix\n",
     "\n",
@@ -365,22 +353,19 @@
     "\n",
     "def Dagger(GramMatrix,M):\n",
     "    temp=np.matmul(ConjugateTranspose(M),GramMatrix)\n",
-    "    return np.matmul(np.linalg.inv(GramMatrix),temp)\n",
-    "    "
+    "    return np.matmul(np.linalg.inv(GramMatrix),temp)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 226,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# Sanity check?"
+    "### Sanity check. Does one recover the integral of the product of two functions ??"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 236,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -389,60 +374,310 @@
        "array([1., 1., 1., 1.])"
       ]
      },
-     "execution_count": 236,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "mutest =  np.ones(4) #CL_grid(3)\n",
+    "Identitytest = np.ones(4)  #np.array([3., 21., 11., 9.]) #np.ones(4) #CL_grid(3) \n",
     "#len(mutest)\n",
-    "mutest"
+    "Identitytest"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 238,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[0.33333333, 0.        , 0.        , 0.        ],\n",
-       "       [0.        , 0.66666667, 0.        , 0.        ],\n",
-       "       [0.        , 0.        , 0.66666667, 0.        ],\n",
-       "       [0.        , 0.        , 0.        , 0.        ]])"
+       "array([[0.11111111, 0.        , 0.        , 0.        ],\n",
+       "       [0.        , 0.88888889, 0.        , 0.        ],\n",
+       "       [0.        , 0.        , 0.88888889, 0.        ],\n",
+       "       [0.        , 0.        , 0.        , 0.11111111]])"
       ]
      },
-     "execution_count": 238,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "CNmuMatrix(mutest)\n",
-    "#This should be the identity, isn't it?"
+    "CNmuMatrix(Identitytest)\n",
+    "#should this be the identity?"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 232,
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "TestC=CNmuMatrix((Identitytest))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def fTestFunction(x):\n",
+    "    fTestFunctionReturn =  x**4 #np.cos(x**2) #x**4  #np.log(x**2) \n",
+    "    return fTestFunctionReturn\n",
+    "def gTestFunction(x):\n",
+    "    gTestFunctionReturn = x**2\n",
+    "    return gTestFunctionReturn"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import scipy.integrate as integrate\n",
+    "#from scipy.integrate import quad"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([ 1. ,  0.5, -0.5, -1. ])"
+       "(0.2857142857142857, 3.172065784643304e-15)"
       ]
      },
-     "execution_count": 232,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Interpolation matrix\n",
-    "CL_grid(3)"
+    "integrate.quad(lambda x: fTestFunction(x)*gTestFunction(x), -1, 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def fTestFunctionCollocationPoints(n):\n",
+    "    \"\"\" \n",
+    "    Gives the fTestFunction evaluated at the x[i] collocation point of a Lobatto grid of size n\n",
+    "    \"\"\"\n",
+    "    N = n-1\n",
+    "    n_grid = np.arange(0, n)\n",
+    "    x_grid = CL_grid(N)\n",
+    "    fTestFunctionAtx= fTestFunction(x_grid) \n",
+    "    return fTestFunctionAtx  \n",
+    "def gTestFunctionCollocationPoints(n):\n",
+    "    \"\"\" \n",
+    "    Gives the gTestFunction evaluated at the x[i] collocation point of a Lobatto grid of size n\n",
+    "    \"\"\"\n",
+    "    N = n-1\n",
+    "    n_grid = np.arange(0, n)\n",
+    "    x_grid = CL_grid(N)\n",
+    "    gTestFunctionAtx= gTestFunction(x_grid) \n",
+    "    return gTestFunctionAtx "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.25"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Cg=np.dot(TestC,gTestFunctionCollocationPoints(len(Identitytest)))\n",
+    "fCg=np.dot(fTestFunctionCollocationPoints(len(Identitytest)),Cg)\n",
+    "fCg"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Interpolant matrix"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#def InterpolationMatrixI(Nbar,N):\n",
+    "def InterpolationMatrixI(nbar,n):\n",
+    "    \"\"\" \n",
+    "    Gives the interpolation matrix for the transition between \n",
+    "    the interpolant vectors f_Nbar and the f_N with resolutions Nbar and N respectively\n",
+    "    (following equation C18 in Jaramillo-PanossoMacedo-Al-Sheikh paper)\n",
+    "    \"\"\"\n",
+    "    ####\n",
+    "    Nbar = nbar -1\n",
+    "    #nbar = Nbar + 1\n",
+    "    nbar_grid = np.arange(0, nbar)\n",
+    "    xbar_grid = CL_grid(Nbar)\n",
+    "    #####\n",
+    "    N = n-1\n",
+    "    #n = N + 1\n",
+    "    n_grid = np.arange(0, n)\n",
+    "    x_grid = CL_grid(N)\n",
+    "    #####\n",
+    "    alpha = np.ones(n)\n",
+    "    alpha[0]=2\n",
+    "    alpha[N]=2\n",
+    "    IndexSummation_grid = np.arange(1, n)\n",
+    "    #####\n",
+    "    Interpolant_Matrix=np.zeros((nbar,n))\n",
+    "    for ibar in nbar_grid :\n",
+    "        for i in n_grid :\n",
+    "            ExpressionListToBeSummed = [(2-Kdelta(j,N))*Chebyshev(j,xbar_grid[ibar])*Chebyshev(j,x_grid[i]) for j in IndexSummation_grid ]\n",
+    "            Interpolant_Matrix[ibar,i] = (1/(N*alpha[i]))*(1+sum(ExpressionListToBeSummed))\n",
+    "    return Interpolant_Matrix          \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 1.00000000e+00,  5.55111512e-17,  0.00000000e+00],\n",
+       "       [ 2.77555756e-17,  1.00000000e+00, -5.55111512e-17],\n",
+       "       [ 0.00000000e+00, -1.11022302e-16,  1.00000000e+00]])"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "### Sanity check \n",
+    "InterpolationMatrixI(3,3)\n",
+    "#This should be the identity"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(5, 4)"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.shape(InterpolationMatrixI(5,4))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def Matrix_Interpolated_Higher_Resolution(M) :\n",
+    "    \"\"\" \n",
+    "    Reads a matrix M with associated resolution n_high and returns\n",
+    "    the interpolated matrix   I^t M I with resolution n_low = n_high/2\n",
+    "    (following equation C21 in Jaramillo-PanossoMacedo-Al-Sheikh paper)\n",
+    "    \"\"\"\n",
+    "    n_high=len(M)\n",
+    "    n_low = int(n_high/2)\n",
+    "    I = InterpolationMatrixI(n_high,n_low)\n",
+    "    It = InterpolationMatrixI(n_high,n_low).T\n",
+    "    temp=np.dot(M,I)\n",
+    "    M_higher = np.dot(It,temp)\n",
+    "              \n",
+    "    return M_higher"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Sanity Check ?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Identitytest_high = np.ones(2*len(Identitytest)) \n",
+    "TestC_high=CNmuMatrix((Identitytest_high))\n",
+    "InterpolatedTestC=Matrix_Interpolated_Higher_Resolution(TestC_high)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(4, 4)"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.shape(InterpolatedTestC)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.33333333333333326"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Cg_better=np.dot(InterpolatedTestC,gTestFunctionCollocationPoints(len(Identitytest)))\n",
+    "fCg_better=np.dot(fTestFunctionCollocationPoints(len(Identitytest)),Cg_better)\n",
+    "fCg_better\n"
    ]
   },
   {
