--- a/Edgar/abc_sturm_liouville/PseudopectrumCalculator.ipynb
+++ b/Edgar/abc_sturm_liouville/PseudopectrumCalculator.ipynb
@@ -489,13 +489,349 @@
     "    eigenvalues_L_Im = eigenvalues_L.imag\n",
     "    \n",
     "    return eigenvalues_L\n",
-    "    \n",
-    "    \n",
-    "    \n",
-    "\n",
-    "    \n",
-    "\n",
     "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#################################################\n",
+    "########### pseudospectrum calculator ###########\n",
+    "#################################################"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def Pseudospectrum_standard(L,B,xmin,xmax,ymin,ymax,Nxgrid,Nygrid,heights,fl) :\n",
+    "    \"\"\"\n",
+    "    Implement Pseudo-Spectrum of a matrix L\n",
+    "    \"\"\"\n",
+    "    from scipy import linalg as LA\n",
+    "    \n",
+    "    ### 1. Preparation of tools \n",
+    "    sizeL = np.shape(L)\n",
+    "    if  np.shape(L)[0]!= np.shape(L)[1]:\n",
+    "        print(\"Non-square Matrix!!! \")\n",
+    "    else : \n",
+    "        n = np.shape(L)[0]\n",
+    "    N = n/2 - 1\n",
+    "   \n",
+    "    ### 2. Calculation of the Spectrum (eigenvalues)\n",
+    "    #eigenvalues_L, eigenvectors_L = LA.eig(L,B)\n",
+    "    eigenvalues_L = LA.eigvals(L,B)\n",
+    "\n",
+    "\n",
+    "    eigenvalues_L_Re = eigenvalues_L.real\n",
+    "    eigenvalues_L_Im = eigenvalues_L.imag\n",
+    "\n",
+    "    \n",
+    "    ### 3. Evaluation of the Pseudospectrum\n",
+    "    \n",
+    "    ### 3.1 Grid for Pseudospectrum calculation\n",
+    "    [X,Y] = np.mgrid[xmin:xmax:Nxgrid*1j,ymin:ymax:Nygrid*1j]\n",
+    "\n",
+    "    Z = X + 1j*Y\n",
+    "\n",
+    "    ### 3.2 Construction of the \"height function\" given by the min of the SVP\n",
+    "    Id =  np.eye(n)\n",
+    "    Sigma_min = np.zeros((Nxgrid,Nygrid))\n",
+    "    \n",
+    "\n",
+    "    for i in np.arange(0, Nxgrid):\n",
+    "        for j in np.arange(0, Nygrid):\n",
+    "            L_shift = L - Z[i,j]*B*Id            \n",
+    "            Sigma_min[i,j] = min(np.linalg.svd(L_shift, full_matrices=True)[1]) \n",
+    "\n",
+    "    \n",
+    "    ### 3.3 Graphical output\n",
+    "    fig = plt.figure()\n",
+    "    ax = fig.add_subplot(111)\n",
+    "    ax.plot(eigenvalues_L_Re, eigenvalues_L_Im, '+', markersize=1)\n",
+    "     \n",
+    "    if fl == \"f\" :\n",
+    "        CS = ax.contourf(X,Y,Sigma_min,heights,locator=ticker.LogLocator(),linewidth=0.5)\n",
+    "    elif fl == \"c\" : \n",
+    "        CS = ax.contour(X,Y,Sigma_min,heights,locator=ticker.LogLocator(),linewidth=0.5)\n",
+    "    else :\n",
+    "        print(\"\\n Pseudospectrum output: \\n No 'contour/filled' version could be identified.\\n Filled version is assumed.\\n\")\n",
+    "        CS = ax.contourf(X,Y,Sigma_min,heights,locator=ticker.LogLocator(),linewidth=0.5)\n",
+    "\n",
+    "    CB = fig.colorbar(CS)\n",
+    "    ax.set_xlabel(r'$\\mathrm{Re}(\\omega_n)$')\n",
+    "    ax.set_ylabel(r'$\\mathrm{Im}(\\omega_n)$')    \n",
+    "    f = mticker.ScalarFormatter(useOffset=False, useMathText=True)\n",
+    "    g = lambda x,pos : \"${}$\".format(f._formatSciNotation('%10e' % x))\n",
+    "    ax.xaxis.set_major_formatter(mticker.FuncFormatter(g))\n",
+    "    ax.yaxis.set_major_formatter(mticker.FuncFormatter(g))\n",
+    "    \n",
+    "    fig.suptitle(r'Pseudospectrum using the $L^2$-inner-product' )\n",
+    "    ax.axis('scaled')\n",
+    "    #ax.axis('equal','datalim')\n",
+    "    ax.axis([xmin,xmax,ymin,ymax])\n",
+    "    ax.grid()   \n",
+    "    #ax.set_xlim(xmin,xmax)\n",
+    "    #ax.set_ylim(ymin,ymax)\n",
+    "    fig.savefig(\"Figures_abc/Pseudospectrum-Standard-Inner-Product\"+\"_N\"+str(N)+\"_Nx\"+str(Nxgrid)+\"_Ny\"+str(Nygrid)+\".pdf\")\n",
+    "\n",
+    "\n",
+    "    fig.show()\n",
+    "    print(\"\\n N =\\n\",N)\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def Kdelta(i,j):\n",
+    "    if (i==j):\n",
+    "        KroneckerDeltaReturn=1\n",
+    "    else:\n",
+    "        KroneckerDeltaReturn=0\n",
+    "    \n",
+    "    return KroneckerDeltaReturn"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def CNmuMatrix(mu) :\n",
+    "    \"\"\" \n",
+    "    Reads an ndarray with the values of the weight function mu at the Chebyshev-Lobatto\n",
+    "    collocation points and returns the matrix C^N_mu\n",
+    "    (following equation C14 in Jaramillo-PanossoMacedo-Al-Sheikh paper)\n",
+    "    \"\"\"\n",
+    "    n = len(mu)\n",
+    "    N = n-1\n",
+    "    n_grid = np.arange(0, n)\n",
+    "    x_grid = CL_grid(N)\n",
+    "    alpha = np.ones(n)\n",
+    "    alpha[0]=2\n",
+    "    alpha[N]=2\n",
+    "    #list of indices in the sum\n",
+    "    # we add one because we want to include the point floor(N/2) in the arrange.\n",
+    "    Nhalffloor_grid = np.arange(1, int(np.floor(N/2)+1))\n",
+    "    #print(\"n =\" ,  n)\n",
+    "    #print(\"N =\" ,  N)\n",
+    "    #print(\"Nhalffloor_grid =\" ,  Nhalffloor_grid)\n",
+    "    CNmuMatrix=np.zeros((n,n))\n",
+    "    for i in n_grid :\n",
+    "        for j in n_grid :\n",
+    "            if (i==j) :  \n",
+    "                #we construct a list of the elements to be summed up using List comprehension\n",
+    "                ExpressionInSummedUpInListForm = [(Chebyshev(2*k,x_grid[i]))*((2-Kdelta(2*k,N))/(4*(k**2)-1)) for k  in Nhalffloor_grid]\n",
+    "                CNmuMatrix[i,j] = ((2*mu[i])/(alpha[i]*N))*(1-sum(ExpressionInSummedUpInListForm))\n",
+    "            else :               \n",
+    "                CNmuMatrix[i,j] = 0\n",
+    "              \n",
+    "    return CNmuMatrix"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def FunctionAtCollocationPoints(f,n):\n",
+    "    \"\"\" \n",
+    "    Gives the function f evaluated at the x[i] collocation point of a Lobatto grid of size n\n",
+    "    \"\"\"\n",
+    "    N = n-1\n",
+    "    n_grid = np.arange(0, n)\n",
+    "    x_grid = CL_grid(N)\n",
+    "    fFunctionAtx= f(x_grid) \n",
+    "    return fFunctionAtx "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def InterpolationMatrixI(nbar,n):\n",
+    "    \"\"\" \n",
+    "    Gives the interpolation matrix for the transition between \n",
+    "    the interpolant vectors f_Nbar and the f_N with resolutions Nbar and N respectively\n",
+    "    (following equation C18 in Jaramillo-PanossoMacedo-Al-Sheikh paper)\n",
+    "    \"\"\"\n",
+    "    ####\n",
+    "    Nbar = nbar -1\n",
+    "    #nbar = Nbar + 1\n",
+    "    nbar_grid = np.arange(0, nbar)\n",
+    "    xbar_grid = CL_grid(Nbar)\n",
+    "    #####\n",
+    "    N = n-1\n",
+    "    #n = N + 1\n",
+    "    n_grid = np.arange(0, n)\n",
+    "    x_grid = CL_grid(N)\n",
+    "    #####\n",
+    "    alpha = np.ones(n)\n",
+    "    alpha[0]=2\n",
+    "    alpha[N]=2\n",
+    "    IndexSummation_grid = np.arange(1, n)\n",
+    "    #####\n",
+    "    Interpolant_Matrix=np.zeros((nbar,n))\n",
+    "    for ibar in nbar_grid :\n",
+    "        for i in n_grid :\n",
+    "            ExpressionListToBeSummed = [(2-Kdelta(j,N))*Chebyshev(j,xbar_grid[ibar])*Chebyshev(j,x_grid[i]) for j in IndexSummation_grid ]\n",
+    "            Interpolant_Matrix[ibar,i] = (1/(N*alpha[i]))*(1+sum(ExpressionListToBeSummed))\n",
+    "    return Interpolant_Matrix "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def Matrix_Interpolated(M) :\n",
+    "    \"\"\" \n",
+    "    Reads a matrix M with associated resolution n_high and returns\n",
+    "    the interpolated matrix   I^t M I with resolution n_low = n_high/2\n",
+    "    (following equation C21 in Jaramillo-PanossoMacedo-Al-Sheikh paper)\n",
+    "    \"\"\"\n",
+    "    n_high=len(M)\n",
+    "    n_low = int(n_high/2)\n",
+    "    I = InterpolationMatrixI(n_high,n_low)\n",
+    "    It = InterpolationMatrixI(n_high,n_low).transpose()\n",
+    "    temp=np.dot(M,I)\n",
+    "    M_interpolated = np.dot(It,temp)\n",
+    "              \n",
+    "    return M_interpolated"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def ConjugateTranspose(A):\n",
+    "    return A.conj().T\n",
+    "\n",
+    "def Dagger(Gram_Matrix,M):\n",
+    "    temp=np.dot(ConjugateTranspose(M),Gram_Matrix)\n",
+    "    return np.dot(np.linalg.inv(Gram_Matrix),temp)\n",
+    "\n",
+    "def EigenValues_gram(M,Gram_Matrix):\n",
+    "    M_dagger = Dagger(Gram_Matrix,M)\n",
+    "    MdaggerM = np.dot(M_dagger,M)\n",
+    "    eigenvalues_MdaggerM = LA.eigvals(MdaggerM)\n",
+    "    return eigenvalues_MdaggerM \n",
+    "\n",
+    "def GramMatrix_abc_not_interpolated(w):\n",
+    "    # For the abc operator the Gram Matrix is simple\n",
+    "    # This needs to be changed for a more complicated case such as poschl-teller\n",
+    "    GramMatrix=CNmuMatrix(w)\n",
+    "    return GramMatrix\n",
+    "\n",
+    "def GramMatrix_abc(w):\n",
+    "    # For the abc operator the Gram Matrix is simple\n",
+    "    # This needs to be changed for a more complicated case such as poschl-teller\n",
+    "    GramMatrix=Matrix_Interpolated(CNmuMatrix(w))\n",
+    "    return GramMatrix\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def Pseudospectrum_gram_norm(L,B,xmin,xmax,ymin,ymax,Nxgrid,Nygrid,heights,fl,Gram_Matrix,label_gram) :\n",
+    "    \"\"\"\n",
+    "    Implement Pseudo-Spectrum of a matrix L\n",
+    "    \"\"\"\n",
+    "    from scipy import linalg as LA\n",
+    "    \n",
+    "    ### 1. Preparation of tools \n",
+    "    sizeL = np.shape(L)\n",
+    "    if  np.shape(L)[0]!= np.shape(L)[1]:\n",
+    "        print(\"Non-square Matrix!!! \")\n",
+    "    else : \n",
+    "        n = np.shape(L)[0]\n",
+    "    N = n/2 - 1\n",
+    "    \n",
+    "    #\n",
+    "    #SizeGram =np.shape(Gram_Matrix)\n",
+    "    #if SizeGram != sizeL:\n",
+    "        #print (\"Size of Gram Matrix should coincide with Size of L\")\n",
+    "    #else:\n",
+    "   \n",
+    "    ### 2. Calculation of the Spectrum (eigenvalues)\n",
+    "    #eigenvalues_L, eigenvectors_L = LA.eig(L,B)\n",
+    "    eigenvalues_L = LA.eigvals(L,B)\n",
+    "\n",
+    "\n",
+    "    eigenvalues_L_Re = eigenvalues_L.real\n",
+    "    eigenvalues_L_Im = eigenvalues_L.imag\n",
+    "\n",
+    "    \n",
+    "    ### 3. Evaluation of the Pseudospectrum\n",
+    "    \n",
+    "    ### 3.1 Grid for Pseudospectrum calculation\n",
+    "    [X,Y] = np.mgrid[xmin:xmax:Nxgrid*1j,ymin:ymax:Nygrid*1j]\n",
+    "\n",
+    "    Z = X + 1j*Y\n",
+    "\n",
+    "    ### 3.2 Construction of the \"height function\" given by the min of the SVP\n",
+    "    Id =  np.eye(n)\n",
+    "    Sigma_min = np.zeros((Nxgrid,Nygrid))\n",
+    "    \n",
+    "\n",
+    "    for i in np.arange(0, Nxgrid):\n",
+    "        for j in np.arange(0, Nygrid):\n",
+    "            L_shift = L - Z[i,j]*B*Id            \n",
+    "            Sigma_min[i,j] = np.min(np.sqrt(np.abs(EigenValues_gram(L_shift,Gram_Matrix)))) \n",
+    "            #min(np.linalg.svd(L_shift, full_matrices=True)[1]) \n",
+    "\n",
+    "    \n",
+    "    ### 3.3 Graphical output\n",
+    "    fig = plt.figure()\n",
+    "    ax = fig.add_subplot(111)\n",
+    "    ax.plot(eigenvalues_L_Re, eigenvalues_L_Im, '+', markersize=1)\n",
+    "     \n",
+    "    if fl == \"f\" :\n",
+    "        CS = ax.contourf(X,Y,Sigma_min,heights,locator=ticker.LogLocator(),linewidth=0.5)\n",
+    "    elif fl == \"c\" : \n",
+    "        CS = ax.contour(X,Y,Sigma_min,heights,locator=ticker.LogLocator(),linewidth=0.5)\n",
+    "    else :\n",
+    "        print(\"\\n Pseudospectrum output: \\n No 'contour/filled' version could be identified.\\n Filled version is assumed.\\n\")\n",
+    "        CS = ax.contourf(X,Y,Sigma_min,heights,locator=ticker.LogLocator(),linewidth=0.5)\n",
+    "\n",
+    "    CB = fig.colorbar(CS)\n",
+    "    ax.set_xlabel(r'$\\mathrm{Re}(\\omega_n)$')\n",
+    "    ax.set_ylabel(r'$\\mathrm{Im}(\\omega_n)$')    \n",
+    "    f = mticker.ScalarFormatter(useOffset=False, useMathText=True)\n",
+    "    g = lambda x,pos : \"${}$\".format(f._formatSciNotation('%10e' % x))\n",
+    "    ax.xaxis.set_major_formatter(mticker.FuncFormatter(g))\n",
+    "    ax.yaxis.set_major_formatter(mticker.FuncFormatter(g))\n",
+    "    \n",
+    "    fig.suptitle(r'Pseudospectrum using Gram Matrix = ' + str(label_gram) )\n",
+    "    ax.axis('scaled')\n",
+    "    #ax.axis('equal','datalim')\n",
+    "    ax.axis([xmin,xmax,ymin,ymax])\n",
+    "    ax.grid()   \n",
+    "    #ax.set_xlim(xmin,xmax)\n",
+    "    #ax.set_ylim(ymin,ymax)\n",
+    "    fig.savefig(\"Figures_abc/Pseudospectrum\"+\"GramMatrix\" +str(label_gram) +\"_N\"+str(N)+\"_Nx\"+str(Nxgrid)+\"_Ny\"+str(Nygrid)+\".pdf\")\n",
+    "\n",
+    "    fig.show()\n",
+    "    print(\"\\n N =\\n\",N)"
    ]
   },
   {
